/*
 * $Id: ChangeLog,v 1.2118 2004/01/21 23:38:58 maurifull Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-21 20:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * source/vm/itemapi.c
     ! Return value missing in hb_itemPutNLen().

2004-01-21 19:45 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtalleg/ssf.h
    - Removed old (testing stage) defines

2004-01-21 20:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * source/vm/itemapi.c
     + Support for LONGLONG in hb_itemPutNLen()
     ! Apply correctly the With to LONG number in hb_itemPutNLLen()
       when the With passed is out of range.
   * source/vm/hvm.c
     + Support for LONGLONG in hb_vmPushNumType()

2004-01-21 19:45 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  ! include/hbapigt.h
    + Added missing #define _alleg _ALLEG directive

2004-01-21 19:00 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  + source/rtl/gtalleg/Makefile
  + source/rtl/gtalleg/gtalleg.c
    + New Allegro based gt.
  + source/rtl/gtalleg/ssf.h
  + source/rtl/gtalleg/ssf.c
    + New Simple Scalable Font library.
  + source/rtl/gtalleg/fixedth.c
    + Fixed Thin font (gtalleg default)
      NOTE: INCOMPLETE, some chars are missing while another ones needs review.

2004-01-21 19:05 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/vm/hvm.c
    ! Fix some error in hb_vmDec() introduced in my last commit.
    ! Restore an commented out code in hb_vmInc().

2004-01-22 11:03 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /contrib/winprn/tprint.prg
     + in TPRINT class method ::Create() call ::Destroy()
       to clean up previous printing if any ( avoids possible memory leak )

2004-01-22 09:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/vm/memvars.c
     - remove hb_itemRelease() from __MVSYMBOLINFO()
  * /contrib/winprn/tprint.prg