@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2118 2004/01/21 23:38:58 maurifull Exp $
+ * $Id: ChangeLog,v 1.2119 2004/01/21 23:44:38 walito Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-01-22 12:46 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
+  * /contrib/winprn/tprint.prg
+     + added hb_ret() to ENUMFONTS()
+  * /source/rtl/inkey.c
+     + adding hb_ret() SETINKEYAFTERBLOCK() & SETINKEYBEFOREBLOCK()
 
 2004-01-21 20:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
    * source/vm/itemapi.c
